<resources>
    <string name="app_name">Weather App</string>
    <string name="forecastTemperature">Temperature</string>
    <string name="Kemerovo">Kemerovo</string>
    <string name="Country">Russian Federation</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="celsius_fahrenheit">Celsius / Fahrenheit</string>
    <string name="air_pressure">Air pressure</string>
    <string name="pressure_value" translatable="false">766.56\nмм рт.ст.</string>
    <string name="air_humidity" translatable="false">Air_humidity</string>
    <string name="humidity_value" translatable="false">78 %</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="wind_value" translatable="false">4 mps</string>
    <string name="temperature_value" translatable="false">29</string>
    <string name="night_mode">Night mode</string>
    <string name="location">Location</string>
    <string name="temperature_units">Temperature units</string>
    <string name="c" translatable="false">C</string>
    <string name="f" translatable="false">F</string>
    <string name="wind_speed_units">Wind speed units</string>
    <string name="m_s">m/s</string>
    <string name="mph">mph</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="apply" translatable="false">APPLY</string>
    <string name="type_location">Type location</string>
    <string name="settings">Settings</string>
    <string name="url_wiki_search_city">https://en.wikipedia.org/wiki/</string>
    <string name="data_request_language">en-en</string>
    <string name="apikey" translatable="false">AIzaSyAYcPoJaNwAPjfwQ0UFNJT6CrrC3ztbCmU</string>
    <string name="input_location" translatable="false">Input location</string>

</resources>
