<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_air_pressure"
        android:contentDescription="@string/air_pressure"
        android:src="@drawable/ic_pressure"
        style="@style/Atmospheric_indicators_images"
        app:layout_constraintEnd_toEndOf="@id/tv_air_pressure_value"
        app:layout_constraintStart_toStartOf="@id/tv_air_pressure_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_air_pressure_value"
        android:text="@string/pressure_value"
        style="@style/Atmospheric_indicators_text"
        app:layout_constraintEnd_toStartOf="@id/tv_air_humidity_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_air_pressure" />

    <ImageView
        android:id="@+id/iv_air_humidity"
        android:contentDescription="@string/air_humidity"
        android:src="@drawable/ic_humidity"
        style="@style/Atmospheric_indicators_images"
        app:layout_constraintEnd_toEndOf="@id/tv_air_humidity_value"
        app:layout_constraintStart_toStartOf="@id/tv_air_humidity_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_air_humidity_value"
        android:text="@string/humidity_value"
        style="@style/Atmospheric_indicators_text"
        app:layout_constraintEnd_toStartOf="@id/tv_wind_value"
        app:layout_constraintStart_toEndOf="@id/tv_air_pressure_value"
        app:layout_constraintTop_toBottomOf="@id/iv_air_humidity" />

    <ImageView
        android:id="@+id/iv_wind"
        android:contentDescription="@string/wind"
        android:src="@drawable/ic_wind"
        style="@style/Atmospheric_indicators_images"
        app:layout_constraintEnd_toEndOf="@id/tv_wind_value"
        app:layout_constraintStart_toStartOf="@id/tv_wind_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_wind_value"
        android:text="@string/wind_value"
        style="@style/Atmospheric_indicators_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_air_humidity_value"
        app:layout_constraintTop_toBottomOf="@id/iv_wind" />

</androidx.constraintlayout.widget.ConstraintLayout>